--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://Mohamed-Salah-El-dien.github.io/Karim-Mohamed",
+  "homepage": "http://Karim-Elkenany.github.io/My-Portfolio",
   "name": "code",
   "version": "0.1.0",
   "private": true,
